--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
-/* Example of @import use
-This imports the `reset.css` file */
 @import './reset.css';
+@import './main.css';
+@import 'mobile_screen.css' screen and (max-width: 350px);
+@import 'medium_screen.css' screen and (max-width: 767px);
