--- a/css/reset.css
+++ b/css/reset.css
@@ -82,17 +82,17 @@ body .dark-theme{
 
 
 /*========== Button Dark/Light ==========*/
-.nav-btn{
+.nav_btn{
   display: flex;
   align-items: center;
 }
-.change-theme{
+.change_theme{
   font-size: 1.25rem;
   color: var(--title-color);
   margin-right: var(--mb-1);
   cursor: pointer;
 }
-.change-theme:hover{
+.change_theme:hover{
   color: var(--first-color);
 }
 
