--- a/css/main.css
+++ b/css/main.css
@@ -61,36 +61,9 @@
   font-weight: var(--font-medium);
 }
 
-.nav_logo:hover {
-  color: var(--first-color);
-}
-
 .nav_toggle {
   font-size: 1.1rem;
   cursor: pointer;
-}
-
-.nav_toggle:hover {
-  color: var(--first-color);
-}
-
-@media screen and (max-width: 767px) {
-  .nav_menu {
-    position: fixed;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    background-color: var(--body-color);
-    padding: 2rem 1.5rem 4rem;
-    box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 1.5rem 1.5rem 0 0;
-    transition: 0.3s;
-  }
-}
-
-.nav_list {
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
 }
 
 .nav_link {
@@ -102,8 +75,36 @@
   font-weight: var(--font-medium);
 }
 
-.nav_link:hover {
+.qualification_button {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-weight);
+  cursor: pointer;
+}
+
+.nav_logo:hover,
+.nav_toggle:hover,
+.nav_link:hover,
+.nav_close,
+.active-link,
+.home_social-icon,
+.home_scroll_button,
+.button--white,
+.button--link,
+.skills_icon,
+.skills_arrow,
+.qualification_button:hover,
+.qualification_button.qualification_active,
+.services_icon,
+.services_modal-close,
+.services_modal-icon,
+.swiper-porfolio-icon,
+.contact_icon {
   color: var(--first-color);
+}
+
+.nav_list {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
 }
 
 .nav_icon {
@@ -116,7 +117,6 @@
   bottom: 0.5rem;
   font-size: 1.5rem;
   cursor: pointer;
-  color: var(--first-color);
 }
 
 .nav_close:hover {
@@ -126,11 +126,6 @@
 /* show menu */
 .show_menu {
   bottom: 0;
-}
-
-/* Active link */
-.active-link {
-  color: var(--first-color);
 }
 
 .scroll-header {
@@ -156,7 +151,6 @@
 
 .home_social-icon {
   font-size: 1.2rem;
-  color: var(--first-color);
 }
 
 .home_social-icon:hover {
@@ -196,7 +190,6 @@
 }
 
 .home_scroll_button {
-  color: var(--first-color);
   transition: 0.3s;
 }
 
@@ -220,9 +213,17 @@
 }
 
 /* ============ buttons ======== */
+.button,
+.skills_percentage,
+.qualification_rounder,
+.qualification_line,
+.swiper-pagination-bullet-active,
+.scrollup {
+  background-color: var(--first-color);
+}
+
 .button {
   display: inline-block;
-  background-color: var(--first-color);
   color: #fff;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -241,7 +242,6 @@
 
 .button--white {
   background-color: #fff;
-  color: var(--first-color);
 }
 
 .button--white:hover {
@@ -260,7 +260,6 @@
 .button--link {
   padding: 0;
   background-color: transparent;
-  color: var(--first-color);
 }
 
 .button--link:hover {
@@ -320,7 +319,6 @@
 .skills_icon,
 .skills_arrow {
   font-size: 2rem;
-  color: var(--first-color);
 }
 
 .skills_icon {
@@ -369,7 +367,6 @@
 
 .skills_percentage {
   display: block;
-  background-color: var(--first-color);
 }
 
 .skills_html {
@@ -429,16 +426,6 @@
   margin-bottom: var(--mb-2);
 }
 
-.qualification_button {
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-weight);
-  cursor: pointer;
-}
-
-.qualification_button:hover {
-  color: var(--first-color);
-}
-
 .qualification_icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
@@ -470,7 +457,6 @@
   display: inline-block;
   width: 13px;
   height: 13px;
-  background-color: var(--first-color);
   border-radius: 50%;
 }
 
@@ -478,7 +464,6 @@
   display: block;
   width: 1px;
   height: 100%;
-  background-color: var(--first-color);
   transform: translate(6px, -7px);
 }
 
@@ -488,10 +473,6 @@
 
 .qualification_active[data-content] {
   display: block;
-}
-
-.qualification_button.qualification_active {
-  color: var(--first-color);
 }
 
 /* ==================== SERVICES ==================== */
@@ -516,7 +497,6 @@
 .services_icon {
   display: block;
   font-size: 1.5rem;
-  color: var(--first-color);
   margin-bottom: var(--mb-1);
 }
 
@@ -578,12 +558,10 @@
   top: 1rem;
   right: 1rem;
   font-size: 1.5rem;
-  color: var(--first-color);
   cursor: pointer;
 }
 
 .services_modal-icon {
-  color: var(--first-color);
   margin-right: var(--mb-0-25);
 }
 
@@ -622,7 +600,6 @@
 
 .swiper-porfolio-icon {
   font-size: 2rem;
-  color: var(--first-color);
 }
 
 .swiper-button-prev {
@@ -635,10 +612,6 @@
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
   bottom: -2.5rem;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: var(--first-color);
 }
 
 .swiper-button-prev,
@@ -659,7 +632,6 @@
 
 .contact_icon {
   font-size: 2rem;
-  color: var(--first-color);
   margin-right: var(--mb-0-75);
 }
 
@@ -756,7 +728,6 @@
   position: fixed;
   right: 1rem;
   bottom: -20%;
-  background-color: var(--first-color);
   opacity: 0.8;
   padding: 0 0.3rem;
   border-radius: 0.4rem;
