--- a/css/medium_screen.css
+++ b/css/medium_screen.css
@@ -1,32 +1,11 @@
-
-@media screen  and (min-width: 568px) {
-  .home_content {
-    grid-template-columns: max-content 1fr 1fr;
-  }
-
-  .home_data {
-    grid-column: initial;
-  }
-
-  .home_img {
-    order: 1;
-    justify-self: center;
-  }
-
-  .skills_container,
-  .portfolio_content,
-  .contact_container,
-  .footer_container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .about_container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .qualification_section {
-    display: grid;
-    grid-template-columns: 0.6fr;
-    justify-content: center;
-  }
+.nav_menu {
+  position: fixed;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  background-color: var(--body-color);
+  padding: 2rem 1.5rem 4rem;
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 1.5rem 1.5rem 0 0;
+  transition: 0.3s;
 }
