--- a/css/min_mobile.css
+++ b/css/min_mobile.css
@@ -1,151 +1,29 @@
-.container {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-body {
-  margin: 0;
-}
-
-.section {
-  padding: 6rem 0 2rem;
-}
-
-.section_subtitle {
-  margin-bottom: 4rem;
-}
-
-.header {
-  top: 0;
-  bottom: initial;
-}
-
-/* to lift the nav to the top */
-.header,
-.main,
-.footer_container {
-  padding: 0 1rem;
-}
-
-.nav {
-  height: calc(var(--header-height) + 1.5rem);
-  column-gap: 1rem;
-}
-
-.nav_icon,
-.nav_close,
-.nav_toggle {
-  display: none;
-}
-
-.nav_list {
-  display: flex;
-  columns: 2rem;
-}
-
-.nav_menu {
-  margin-left: auto;
-}
-
-.change_theme {
-  margin: 0;
-}
-
-.home_container {
-  row-gap: 5rem;
-}
-
 .home_content {
-  padding-top: 5.5rem;
-  column-gap: 2rem;
+  grid-template-columns: max-content 1fr 1fr;
 }
 
-.home_blob {
-  width: 270px;
+.home_data {
+  grid-column: initial;
 }
 
-.home_scroll {
-  display: block;
+.home_img {
+  order: 1;
+  justify-self: center;
 }
 
-.home_scroll_button {
-  margin-left: 3rem;
+.skills_container,
+.portfolio_content,
+.contact_container,
+.footer_container {
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .about_container {
-  column-gap: 5rem;
+  grid-template-columns: repeat(1, 1fr);
 }
 
-.about_img {
-  width: 350px;
-}
-
-.about_description {
-  text-align: initial;
-}
-
-.about_info {
-  justify-content: space-between;
-}
-
-.about_buttons {
-  justify-content: initial;
-}
-
-.qualification_tabs {
+.qualification_section {
+  display: grid;
+  grid-template-columns: 0.6fr;
   justify-content: center;
-}
-
-.qualification_button {
-  margin: 0 var(--mb-1);
-}
-
-.qualification_sections {
-  grid-template-columns: 0.5fr;
-}
-
-.services_container {
-  grid-template-columns: repeat(3, 218px);
-  justify-content: center;
-}
-
-.services_icon {
-  font-size: 2rem;
-}
-
-.services_content {
-  padding: 6rem 0 2rem 2.5rem;
-}
-
-.services_modal_content {
-  width: 450px;
-}
-
-.portfolio_img {
-  width: 320px;
-}
-
-.portfolio_content {
-  align-items: center;
-}
-
-.footer_container {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.footer_bg {
-  padding: 3rem 0 3.5rem;
-}
-
-.footer_links {
-  flex-direction: row;
-  column-gap: 2rem;
-}
-
-.footer_socials {
-  justify-self: flex-end;
-}
-
-.footer_copy {
-  margin-top: 4.5rem;
 }
