--- a/css/reset.css
+++ b/css/reset.css
@@ -66,7 +66,7 @@
 }
 
 /*========== Variables Dark theme ==========*/
-body .dark-theme{
+.dark-theme{
   
   --first-color-second: hsl(var(--hue-color), 30%, 8%);
   --title-color: hsl(var(--hue-color), 8%, 95%);
@@ -77,7 +77,6 @@ body .dark-theme{
   --scroll-bar-color: hsl(var(--hue-color), 12%, 45%);
   --scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
  
-
 }
 
 
